Fix: Background and foreground colors do not have a sufficient contrast ratio

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   --app-background-color: #3e6623;
   --card-background-color: #8ab661;
   --white-color: #fff;
+  --dark-gray-color: #3d3d3d;
   --golden-color: darkgoldenrod;
   --header-background-image: linear-gradient(#000, #3e6623);
   --app-padding: 3.4vw;
