--- a/src/components/CardGrid/Card/Card.css
+++ b/src/components/CardGrid/Card/Card.css
@@ -31,7 +31,7 @@
   font-family: 'Galada', serif;
   font-size: 1.5rem;
   font-weight: bold;
-  color: var(--white-color);
+  color: var(--dark-gray-color);
   text-transform: capitalize;
 }
 
